src/app/(pages)/page.scss
@use "@styles/breakpoints" as breakpoints;
@use "@styles/safeareas" as safeareas;

.chart-page-main {
  display: grid;
  max-height: calc(100dvh - safeareas.$header-height);

  @include breakpoints.media("md") {
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
  }
}

.chart-sidebar-root {
  @apply grid content-start gap-4
    border-none
    p-3;

  min-width: auto;
  max-height: calc(50dvh - safeareas.$header-height) !important;

  @include breakpoints.media("md") {
    @apply border-r-neutral-800/20 dark:border-r-neutral-200/20;

    min-width: 20rem; // min-w-80
    max-height: calc(100dvh - safeareas.$header-height) !important;
    border-right: solid 1px;
  }
}

.chart-display-root {
  @apply grid
    h-full min-h-full w-full;

  padding: 0.75rem; // p-3
}

.chart-prefecture-list {
  /* I can use both Tailwind CSS and raw SASS, but I prefer the former.
   * (and the latter when it is complex, such as when there are many properties)
   */

  /* Tailwind CSS */
  // @apply grid grid-cols-3 gap-4 md:grid-cols-5;

  /* Raw SASS */
  display: grid;
  grid-template-columns: repeat(4, minmax(0, 1fr));
  gap: 1rem;

  @include breakpoints.media("md") {
    grid-template-columns: repeat(3, minmax(0, 1fr));
  }
}

